--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t ranaivoson0/react-test -f ./client/Dockerfile.dev .
+  - docker build -t ranaivoson0/react-test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run ranaivoson0/react-test npm test -- --coverage
