update travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,16 @@ after_success:
   - docker push ranaivoson0/multi-nginx
   - docker push ranaivoson0/multi-server
   - docker push ranaivoson0/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: eu-west-3
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-eu-west-3-147763538318
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
