--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - docker build -t ranaivoson0/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run ranaivoson0/react-test npm test
+  - docker run ranaivoson0/react-test npm test -- --watchAll=false
 
 deploy:
   provider: script
